; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_avpacket.c_packet_alloc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_avpacket.c_packet_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }

@INT_MAX = common dso_local global i32 0, align 4
@AV_INPUT_BUFFER_PADDING_SIZE = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__**, i32)* @packet_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @packet_alloc(%struct.TYPE_4__** %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.TYPE_4__** %0, %struct.TYPE_4__*** %4, align 8
  store i32 %1, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = icmp slt i32 %7, 0
  br i1 %8, label %15, label %9

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @INT_MAX, align 4
  %12 = load i32, i32* @AV_INPUT_BUFFER_PADDING_SIZE, align 4
  %13 = sub nsw i32 %11, %12
  %14 = icmp sge i32 %10, %13
  br i1 %14, label %15, label %18

15:                                               ; preds = %9, %2
  %16 = load i32, i32* @EINVAL, align 4
  %17 = call i32 @AVERROR(i32 %16)
  store i32 %17, i32* %3, align 4
  br label %38

18:                                               ; preds = %9
  %19 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = load i32, i32* @AV_INPUT_BUFFER_PADDING_SIZE, align 4
  %22 = add nsw i32 %20, %21
  %23 = call i32 @av_buffer_realloc(%struct.TYPE_4__** %19, i32 %22)
  store i32 %23, i32* %6, align 4
  %24 = load i32, i32* %6, align 4
  %25 = icmp slt i32 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %18
  %27 = load i32, i32* %6, align 4
  store i32 %27, i32* %3, align 4
  br label %38

28:                                               ; preds = %18
  %29 = load %struct.TYPE_4__**, %struct.TYPE_4__*** %4, align 8
  %30 = load %struct.TYPE_4__*, %struct.TYPE_4__** %29, align 8
  %31 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i32, i32* %5, align 4
  %34 = sext i32 %33 to i64
  %35 = add nsw i64 %32, %34
  %36 = load i32, i32* @AV_INPUT_BUFFER_PADDING_SIZE, align 4
  %37 = call i32 @memset(i64 %35, i32 0, i32 %36)
  store i32 0, i32* %3, align 4
  br label %38

38:                                               ; preds = %28, %26, %15
  %39 = load i32, i32* %3, align 4
  ret i32 %39
}

declare dso_local i32 @AVERROR(i32) #1

declare dso_local i32 @av_buffer_realloc(%struct.TYPE_4__**, i32) #1

declare dso_local i32 @memset(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
